// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest-auto-snapshots > NavBarMenu Matches snapshot when boolean prop "isImpersonation" is set to: "false" 1`] = `
<ForwardRef(styled.div)
  isImpersonation={false}
  onClick={[MockFunction]}
>
  <ForwardRef(styled.div)>
    <ForwardRef(styled.div)
      isImpersonation={false}
    >
      jest-auto-snapshots String Fixture
    </ForwardRef(styled.div)>
    <ForwardRef(styled.div)
      isImpersonation={false}
    >
      jest-auto-snapshots String Fixture
    </ForwardRef(styled.div)>
  </ForwardRef(styled.div)>
  <ForwardRef(styled.div)
    avatar="https://s3.amazonaws.com/buffer-ui/Default+Avatar.png"
    onClick={[MockFunction]}
  />
  <ForwardRef(styled.div)>
    <ChevronDownIcon
      color="grayLight"
      size="large"
    />
  </ForwardRef(styled.div)>
</ForwardRef(styled.div)>
`;

exports[`jest-auto-snapshots > NavBarMenu Matches snapshot when passed all props 1`] = `
<ForwardRef(styled.div)
  isImpersonation={true}
  onClick={[MockFunction]}
>
  <ForwardRef(styled.div)>
    <ForwardRef(styled.div)
      user={
        Object {
          "email": "jest-auto-snapshots String Fixture",
          "name": "jest-auto-snapshots String Fixture",
        }
      }
    >
      Impersonating
    </ForwardRef(styled.div)>
    <ForwardRef(styled.div)
      isImpersonation={true}
    >
      jest-auto-snapshots String Fixture
    </ForwardRef(styled.div)>
    <ForwardRef(styled.div)
      isImpersonation={true}
    >
      jest-auto-snapshots String Fixture
    </ForwardRef(styled.div)>
  </ForwardRef(styled.div)>
  <ForwardRef(styled.div)
    avatar="https://s3.amazonaws.com/buffer-ui/Default+Avatar.png"
    onClick={[MockFunction]}
  />
  <ForwardRef(styled.div)>
    <ChevronDownIcon
      color="grayLight"
      size="large"
    />
  </ForwardRef(styled.div)>
</ForwardRef(styled.div)>
`;

exports[`jest-auto-snapshots > NavBarMenu Matches snapshot when passed only required props 1`] = `
<ForwardRef(styled.div)
  isImpersonation={false}
  onClick={[MockFunction]}
>
  <ForwardRef(styled.div)>
    <ForwardRef(styled.div)
      isImpersonation={false}
    >
      jest-auto-snapshots String Fixture
    </ForwardRef(styled.div)>
    <ForwardRef(styled.div)
      isImpersonation={false}
    >
      jest-auto-snapshots String Fixture
    </ForwardRef(styled.div)>
  </ForwardRef(styled.div)>
  <ForwardRef(styled.div)
    avatar="https://s3.amazonaws.com/buffer-ui/Default+Avatar.png"
    onClick={[MockFunction]}
  />
  <ForwardRef(styled.div)>
    <ChevronDownIcon
      color="grayLight"
      size="large"
    />
  </ForwardRef(styled.div)>
</ForwardRef(styled.div)>
`;
